--- a/src/components/card-list/card-list.css
+++ b/src/components/card-list/card-list.css
@@ -11,3 +11,9 @@
     height: 600px;
     width: 100%;
 }
+
+.card__grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
